<resources>
    <string name="app_name">LikeRoom</string>
    <string name="action_settings">Settings</string>
    <string name="mainactivity_string">메인화면</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_item">제품 프래그먼트</string>
    <string name="hello_blank_fragment_user">고객 프래그먼트</string>
    <string name="hello_blank_fragment_point">포인트 프래그먼트</string>

    <!-- 매장 선택 화면-->
    <string name="loadingStoreAddress">매장 주소</string>
    <string name="addNewStore">신규 추가</string>
    <string name="selectStore">매장 선택</string>

    <!-- 새로운 매장 등록 화면-->
    <string name="addNewStoreTitle">제목</string>
    <string name="addNewStoreContent">내용</string>

    <!-- 스탬프 화면-->
    <string name="menu_stamp_string">스탬프</string>
    <string name="showSpecialStamp">특수 스탬프 카드 보기</string>
    <string name="loadingStorePhoneNumber">매장 전화번호</string>
    <string name="loadingCustomerName">고객님</string>
    <!-- 공지사항 화면-->
    <string name="menu_notice_string">공지사항</string>
    <string name="loadingStoreName">매장 이름</string>
    <!-- 매장 정보 화면-->
    <string name="menu_info_string">매장 정보</string>
    <string name="loadingStoreVarious">매장 구분</string>
    <string name="loadingStoreOpenAndCloseTime">매장 오픈 마감 시간</string>
    <string name="btnDeleteThisStore">매장 삭제</string>

    <!-- 개발 중-->
    <string name="phoneCallFail">해당 매장에 연결하려면 전화 권한이 필요로 합니다</string>
    <string name="emailLoadFail">본 앱을 이용하려면 구글 계정이 필요로 합니다</string>
    <string name="internetConnectionFail">빵집에 도달하는데 어려움을 겪고 있습니다</string>
    <string name="positiveButtonMessage">확인</string>
    <string name="featureLoadFail">기능 준비중</string>
</resources>
