<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutEachStoreItem"
    android:orientation="horizontal"
    android:layout_height="80dp"
    android:layout_marginTop="15dp"
    android:background="@color/White"
    android:layout_width="fill_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgShopIcon"
        android:background="@mipmap/shop"
        android:layout_gravity="center_vertical"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:text="@string/loadingStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtShopName"
            android:textSize="20dp"
            android:textColor="@color/clrTextColorDeepDark"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:text="@string/loadingStoreAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtShopAddress"
            android:textSize="14dp"
            android:textColor="@color/clrTextColorMediumDark"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <TextView
        android:text="@string/loadingStorePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtShopPhoneNumber"
        android:layout_weight="0"
        android:textSize="18dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:textColor="@color/clrTextColorMediumDark" />

</LinearLayout>
