<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kangjisung.likeroom.FragmentNotice.FragmentNoticeMain"
    android:background="@color/White">

    <!--매장정보부분. 내가 주말동안 디자인할 부분이다!-->
    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/test01"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/callButtonMask"
                android:background="@drawable/button_mask"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                app:srcCompat="@mipmap/icon_call"
                android:id="@+id/btnCallButton"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:text="매장이름"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/storeName"
                android:textSize="28dp"
                android:textColor="@color/clrTextColorDeepDark"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp" />

            <TextView
                android:text="@string/loadingStorePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtStorePhone"
                android:textColor="@color/Gray"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:text="매장구분"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/storeCategory"
            android:layout_alignParentRight="true"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/clrTextColorMediumDark"
            android:textStyle="bold"
            android:textSize="14dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:srcCompat="@color/Gray"
        android:id="@+id/imageView7"
        android:layout_marginTop="100dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!--<ImageView
                android:layout_width="match_parent"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/googleMap"
                android:layout_height="200dp" />-->

            <fragment
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/googleMap"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:name="com.example.kangjisung.likeroom.FragmentInfo.FragmentInfoMain"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@mipmap/icon_map"
                    android:id="@+id/mapIcon"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="21dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:text="@string/loadingStoreAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/storeLocation"
                    android:textColor="@color/clrTextColorMediumDark"
                    android:layout_alignParentRight="false"
                    android:layout_centerInParent="false"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="80dp"
                    android:layout_centerVertical="true"
                    android:textSize="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <ImageView
                    app:srcCompat="@mipmap/icon_time"
                    android:id="@+id/timeIcon"
                    android:layout_marginLeft="24dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

                <TextView
                    android:text="@string/loadingStoreOpenAndCloseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtStoreManageTime"
                    android:textColor="@color/clrTextColorMediumDark"
                    android:layout_centerInParent="false"
                    android:layout_marginLeft="80dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="18dp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@color/Gray"
                android:id="@+id/lineSplit"
                android:layout_height="2dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/icon_menu_user_selected"
                android:id="@+id/storePicture"
                android:layout_height="200dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:srcCompat="@color/Gray"
                android:id="@+id/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="match_parent"
                android:background="@color/test01">

                <ImageView
                    android:layout_width="30dp"
                    app:srcCompat="@mipmap/icon_delete"
                    android:id="@+id/deleteIcon"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="false"
                    android:layout_marginLeft="80dp"
                    android:layout_height="30dp" />

                <Button
                    android:text="@string/btnDeleteThisStore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/deleteButton"
                    android:background="@drawable/button_mask"
                    android:textColor="@color/clrTextColorDeepDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
