<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kangjisung.likeroom.FragmentStamp.FragmentStampMain"
    android:background="@color/White">

    <!-- TODO: Update blank fragment layout -->
<!--점주앱에서 포인트적립이 메인페이지라면 고객앱에서는 이 페이지가 메인페이지이다.
    적립된 스탬프를 확인할 수 있는 페이지의 디자인이다.
    여기에서 버튼 밑에 viewPager로 스탬프가 들어가야하는데...나에게는 너무나 어렵...-->
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/stamp_store_title_background"
        android:layout_alignParentTop="true"
        android:paddingTop="3dp"
        android:paddingBottom="10dp"
        android:layout_height="90dp">

        <TextView
            android:text="@string/loadingStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtShopName"
            android:layout_marginLeft="30dp"
            android:textColor="@color/clrTextColorDeepDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:textSize="28dp" />

        <TextView
            android:text="@string/loadingStorePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtShopPhoneNumber"
            android:layout_marginLeft="35dp"
            android:textColor="@color/clrTextColorMediumDark"
            android:layout_alignParentLeft="true"
            android:textStyle="normal|bold"
            android:layout_marginBottom="5dp"
            android:textSize="20dp"
            android:layout_alignParentBottom="true" />

        <TextView
            android:text="@string/loadingCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCustomerName"
            android:layout_weight="1"
            android:textSize="18dp"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/clrTextColorDeepDark"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:text="특수 스탬프 카드 보기"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowSpecialStamp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_mask"
            android:textColor="@color/clrTextColorDeepDark"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_alignParentBottom="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_height="25dp">

                <Button
                    android:id="@+id/button3"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/icon_back"
                    android:layout_height="40dp"
                    android:layout_width="40dp" />

                <android.support.design.widget.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tabLayout">

                </android.support.design.widget.TabLayout>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/button2"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/icon_back"
                    android:rotation="180" />

            </LinearLayout>

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttontest"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="#FFFFFF"
                android:layout_marginTop="40dp">
            </android.support.v4.view.ViewPager>

        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/presence_invisible"
                    android:id="@+id/imageView"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:text="스탬프 유의사항"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textColor="@color/clrTextColorMediumDark"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="65dp"
                    android:textSize="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/presence_invisible"
                    android:id="@+id/imageView2"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:text="스탬프 유의사항"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_centerVertical="true"
                    android:textColor="@color/clrTextColorMediumDark"
                    android:textSize="18dp"
                    android:layout_marginLeft="65dp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
